fix Overflow-y to Overflow-x (mistake ._.)

--- a/public/bcss.css
+++ b/public/bcss.css
@@ -12,7 +12,7 @@ body {
     font-family: 'D-DIN', sans-serif;
     color: white;
     background: black;
-    overflow-y: hidden;
+    overflow-x: hidden;
 }
 .bg-black {
     background: black;
